test/files/neg/t10068.check
t10068.scala:6: error: i : Only methods can be marked @elidable.
  @elidable(INFO) val i: Int = 42
                      ^
t10068.scala:7: error: j: Only methods can be marked @elidable.
  @elidable(INFO) lazy val j: Int = 42
                           ^
t10068.scala:8: error: k : Only methods can be marked @elidable.
  @elidable(INFO) var k: Int = 42
                      ^
t10068.scala:10: error: D: Only methods can be marked @elidable.
@elidable(INFO) class D
                      ^
four errors found
